prusti/tests/pass/parse/parse_err.stderr
error: expected expression
 --> $DIR/parse_err.rs:6:18
  |
6 | #[requires(true ++ 1)]
  |                  ^

error: expected expression
 --> $DIR/parse_err.rs:9:17
  |
9 | #[ensures(true ++ 1)]
  |                 ^

error: expected expression
  --> $DIR/parse_err.rs:14:26
   |
14 |         invariant!(true ++ 1)
   |                          ^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression
  --> $DIR/parse_err.rs:27:17
   |
27 | #[ensures(true ++ 1)]
   |                 ^

error: aborting due to 5 previous errors

